compiler/testData/diagnostics/tests/secondaryConstructors/superAnyNonEmpty.kt
// !DIAGNOSTICS: -UNUSED_PARAMETER
class A {
    constructor(): super(<!TOO_MANY_ARGUMENTS!>1<!>) { }
}
